# algos

./: .gitignore  CMakeLists.txt  InsertationSort.hpp  MergeSort.hpp  README  bench.cpp  tests.cpp
include/Algos/: BinarySearch.hpp  InsertationSort.hpp  Merge.hpp  MergeSort.hpp
tests/: BinarySearchTests.cpp  InsertationSortTests.cpp  MergeSortTests.cpp  MergeTests.cpp
